[package]
name = "governance_backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/decentralized-legal-system/governance"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
deep_causality = "0.2.7"
ic-cdk = "0.9.2"
ic-cdk-macros = "0.7.0"
ic-stable-structures = "0.5.4"
serde = "1.0.164"
#ic-cdk-timers = "0.3.0" # Feel free to remove this dependency if you don't need timers
