[package]
name = "governance_backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/decentralized-legal-system/governance"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.0"
ic-stable-structures = "0.5.6"
serde = "1.0.175"
#ic-cdk-timers = "0.3.0" # Feel free to remove this dependency if you don't need timers
