[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/decentralized-legal-system/governance"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deep_causality = { version = "0.6.1" }